--- a/styles/global.css
+++ b/styles/global.css
@@ -3,3 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body, h1, h2, h3, h4, button, span, p, a {
+    font-family: Arial, Helvetica, sans-serif;
+}
