--- a/styles/index.css
+++ b/styles/index.css
@@ -1,16 +1,21 @@
 header {
+    margin: auto 0;
     border-bottom: 1px solid rgb(240, 240, 240);
     box-shadow: #6D6D6D;
+    position: fixed;
+    width: 100%;
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+    background-color: #fff;
 }
 
-#container {
+.menu-principal {
     text-align: center;
     align-items: center;
     justify-content: center;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: 80px;
-    grid-gap: 5px 8px;
+    
 }
 
 .logo button {
@@ -19,16 +24,16 @@ header {
     border: none;
 }
 
-#menu ul {
+.menu ul {
     list-style: none;
 }
 
-#menu ul li { 
+.menu ul li { 
     display: inline; 
+    margin-left: 15px;
 }
 
-#menu ul li a {
-    padding: 2px 10px;
+.menu ul li a {
     display: inline-block;
     font-size: 23px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -38,7 +43,18 @@ header {
     border-bottom:3px solid #EDEDED;
 }
 
-#menu ul li a:hover {
+.menu ul li a:hover {
     color: #6D6D6D;
     border-bottom:3px solid #74197e;
+}
+
+main {
+    margin: 0 auto;
+    width: 1000px;
+}
+
+main h1 {
+    padding-top: 3em;
+    text-align: center;
+    color:rgb(74, 30, 146);
 }
