--- a/styles/global.css
+++ b/styles/global.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
-body, h1, h2, h3, h4, button, span, p, a {
-    font-family: Arial, Helvetica, sans-serif;
+body {
+    background-color: #F7F7F7;
+}
+
+h1, h2, h3, h4, button, span, p, a {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
