--- a/css/index.css
+++ b/css/index.css
@@ -10,48 +10,131 @@ body {
 }
 
 header {
-    margin: auto 0;
-    border-bottom: 1px solid rgb(240, 240, 240);
-    width: 100%;
-    box-shadow: 0 0.25rem 0.75rem rgb(0 0 0 / 5%);
-    background-color: #fff;
-    padding: 1em;
-}
-
-#nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
 
-#menu {
-    display: flex;
-    list-style: none;
-    gap: 1rem;
-}
+    width: 100%;
+    height: 70px;
+    padding: 2rem;
 
-#menu a {
-    color: #1c1b1b;
-    text-decoration: none;
-    font-size: 30px;
-}
-
-#menu a:hover {
-    border-bottom: solid 1px #000;
-}
-
-#redes-sociais {
-    display: flex;
-    list-style: none;
-    gap: .5rem;
+    border-bottom: 1px solid rgb(240, 240, 240);
+    box-shadow: 0 0.25rem 0.75rem rgb(0 0 0 / 5%);
+    background-color: #fff;
 }
 
 main {
     max-width: 980px;
 }
 
-#destaque {
+#menu {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    list-style: none;
+    gap: 2rem;
+}
+
+.options {
+    text-decoration: none;
+    color: #2b2b2a;
+    font-size: 1.4rem;
+    padding: .5rem;
+}
+
+.options:hover {
+    background: #f0f0f0;
+}
+
+#menu li span {
+    padding: 2px;
+}
+
+#btn-mobile {
+    display: none;
+}
+
+@media(max-width: 600px) {
+    #btn-mobile {
+        display: block;
+    }
+
+    #menu {
+        display: block;
+        position: absolute;
+        width: 100%;
+        top: 70px;
+        right: 0;
+        background: #fff;
+        z-index: 1000;
+        height: 0px;
+        transition: .5s;
+        visibility: hidden;
+        overflow-y: hidden;
+    }
+
+    #nav.active #menu {
+        height: calc(100vh - 70px);
+        visibility: visible;
+        overflow-y: auto;
+    }
+
+    .options {
+        display: block;
+        text-decoration: none;
+        color: #2b2b2a;
+        font-size: 1.3rem;
+        border-bottom: 2px solid #f0f0f0;
+
+        padding: 1rem 0;
+        margin: 0 1rem;
+    }
+
+    #redes-sociais{
+        padding: 1rem 0;
+        margin: 0 .5rem;
+    }
+
+    #redes-sociais span{
+        margin: 0 .5rem;
+    }
+
+    #btn-mobile {
+        display: flex;
+        align-items: center;
+        padding: .5rem 1rem;
+        font-size: 1.3rem;
+        border: none;
+        cursor: pointer;
+        background-color: transparent;
+        gap: .7rem;
+    }
+
+    #hamburguer {
+        width: 30px;
+        border-top: 3px solid;
+    }
+
+    #hamburguer::after, #hamburguer::before {
+        content: '';
+        display: block;
+        width: 30px;
+        height: 3px;
+        background: currentColor;
+        margin-top: 7px;
+        transition: .3s;
+        position: relative;
+    }
+
+    #nav.active #hamburguer {
+        border-top-color: transparent;
+    }
+
+    #nav.active #hamburguer::before {
+        transform: rotate(135deg);
+    }
+
+    #nav.active #hamburguer::after {
+        transform: rotate(-135deg);
+        top: -10px
+    }
 }
