--- a/css/index.css
+++ b/css/index.css
@@ -1,149 +1,170 @@
 * {
-    margin: 0 auto;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0 auto;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background: #F7F7F7;
-    font-family: sans-serif;
+  background: #f7f7f7;
+  font-family: sans-serif;
 }
 
 header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  width: 100%;
 
-    width: 100%;
-    height: 70px;
-    padding: 2rem;
-
-    border-bottom: 1px solid rgb(240, 240, 240);
-    box-shadow: 0 0.25rem 0.75rem rgb(0 0 0 / 5%);
-    background-color: #fff;
+  border-bottom: 1px solid rgb(240, 240, 240);
+  box-shadow: 0 0.25rem 0.75rem rgb(0 0 0 / 5%);
+  background-color: #fff;
 }
 
 #logo {
-    margin-right: 2rem;
+  margin-left: 0;
 }
 
-main {
-    max-width: 980px;
+.center-itens {
+  max-width: 930px;
 }
 
+#nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 
-#menu {
-    display: flex;
-    align-items: center;
-    list-style: none;
-    gap: .5rem;
+  height: 70px;
+  padding: 2rem;
+}
+
+#menu,
+#btn-mobile {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  gap: 0.5rem;
+  margin-right: 0;
 }
 
 .options {
-    text-decoration: none;
-    color: #2b2b2a;
-    font-size: 1.4rem;
-    padding: .5rem;
+  text-decoration: none;
+  color: #2b2b2a;
+  font-size: 1.4rem;
+  padding: 0.5rem;
 }
 
 .options:hover {
-    background: #f0f0f0;
+  background: #f0f0f0;
 }
 
 #redes-sociais {
-    margin-left: 3rem;
+  margin-left: 3rem;
 }
 
 #menu li span {
-    padding: 2px;
+  padding: 2px;
 }
 
 #btn-mobile {
-    display: none;
+  display: none;
 }
 
-@media(max-width: 600px) {
-    #btn-mobile {
-        display: block;
-    }
+#destaque {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
-    #menu {
-        display: block;
-        position: absolute;
-        width: 100%;
-        top: 70px;
-        right: 0;
-        background: #fff;
-        z-index: 1000;
-        height: 0px;
-        transition: .5s;
-        visibility: hidden;
-        overflow-y: hidden;
-    }
+@media (max-width: 600px) {
+  #btn-mobile {
+    display: block;
+  }
 
-    #nav.active #menu {
-        height: calc(100vh - 70px);
-        visibility: visible;
-        overflow-y: auto;
-    }
+  #menu {
+    display: block;
+    position: absolute;
+    width: 100%;
+    top: 70px;
+    right: 0;
+    background: #fff;
+    z-index: 1000;
+    height: 0px;
+    transition: 0.5s;
+    visibility: hidden;
+    overflow-y: hidden;
+  }
 
-    .options {
-        display: block;
-        text-decoration: none;
-        color: #2b2b2a;
-        font-size: 1.3rem;
-        border-bottom: 2px solid #f0f0f0;
+  #nav.active #menu {
+    height: calc(100vh - 70px);
+    visibility: visible;
+    overflow-y: auto;
+  }
 
-        padding: 1rem 0;
-        margin: 0 1rem;
-    }
+  .options {
+    display: block;
+    text-decoration: none;
+    color: #2b2b2a;
+    font-size: 1.3rem;
+    border-bottom: 2px solid #f0f0f0;
 
-    #redes-sociais{
-        padding: 1rem 0;
-        margin: 0 .5rem;
-    }
+    padding: 1rem 0;
+    margin: 0 1rem;
+  }
 
-    #redes-sociais span{
-        margin: 0 .5rem;
-    }
+  #redes-sociais {
+    padding: 1rem 0;
+    margin: 0 0.5rem;
+  }
 
-    #btn-mobile {
-        display: flex;
-        align-items: center;
-        padding: .5rem 1rem;
-        font-size: 1.3rem;
-        border: none;
-        cursor: pointer;
-        background-color: transparent;
-        gap: .7rem;
-    }
+  #redes-sociais span {
+    margin: 0 0.5rem;
+  }
 
-    #hamburguer {
-        width: 30px;
-        border-top: 3px solid;
-    }
+  #btn-mobile {
+    display: flex;
+    align-items: center;
+    padding: 0.5rem 1rem;
+    font-size: 1.3rem;
+    border: none;
+    cursor: pointer;
+    background-color: transparent;
+    gap: 0.7rem;
+  }
 
-    #hamburguer::after, #hamburguer::before {
-        content: '';
-        display: block;
-        width: 30px;
-        height: 3px;
-        background: currentColor;
-        margin-top: 7px;
-        transition: .3s;
-        position: relative;
-    }
+  #hamburguer {
+    width: 30px;
+    border-top: 3px solid;
+  }
 
-    #nav.active #hamburguer {
-        border-top-color: transparent;
-    }
+  #hamburguer::after,
+  #hamburguer::before {
+    content: "";
+    display: block;
+    width: 30px;
+    height: 3px;
+    background: currentColor;
+    margin-top: 7px;
+    transition: 0.3s;
+    position: relative;
+  }
 
-    #nav.active #hamburguer::before {
-        transform: rotate(135deg);
-    }
+  #nav.active #hamburguer {
+    border-top-color: transparent;
+  }
 
-    #nav.active #hamburguer::after {
-        transform: rotate(-135deg);
-        top: -10px
-    }
+  #nav.active #hamburguer::before {
+    transform: rotate(135deg);
+  }
+
+  #nav.active #hamburguer::after {
+    transform: rotate(-135deg);
+    top: -10px;
+  }
+
+  #destaque {
+    display: grid;
+  }
+
+  #destaque h1 {
+    padding: 1rem;
+    width: 22rem;
+    font-size: 1.5rem;
+  }
 }
